# render-interpreter

./: CMakeLists.txt  debug_commands.txt
src/: main.cpp  tgaimage.h  utils.h
src/engine/: Color.cpp  Color.h  Frame.cpp  Frame.h  Model.cpp  Model.h  Scene.h
src/engine/math/: Matrix.h  Polygon.h  Vector.h
src/interpreter/: Callback.h  Command.h  ConstantCommand.h  ConstructCommand.h  ContainerVariable.h  FloatVariable.h  FunctionCommand.h  IVariable.h  Interpreter.cpp  Interpreter.h  StringVariable.h
